# rust-lang

./: .gitignore
CLI/: main.rs
Enums/: main.rs
Loops & IfElse/: functions.rs  if-else.rs  loops.rs  match-c.rs  struct.rs
Project/todo-app-backend/: .env  Cargo.toml  Readme.md  todo.db
Project/todo-app-backend/migrations/: 20260709101917_create_users.sql
Project/todo-app-backend/src/: dto.rs  main.rs  middlewares.rs  routes.rs
Project/todo-app-backend/src/configs/: config.rs
Project/todo-app-backend/src/db/: connection.rs
Project/todo-app-backend/src/dto/: signup_dto.rs
Project/todo-app-backend/src/handlers/: auth.rs  user.rs
Project/todo-app-backend/src/middlewares/: auth.rs  logger.rs
Project/todo-app-backend/src/models/: user.rs
Project/todo-app-backend/src/repositories/: auth_repository.rs
Project/todo-app-backend/src/routes/: auth.rs  user.rs
Project/todo-app-backend/src/services/: auth_service.rs
Project/todo-app-backend/src/shared/: api_response.rs
Project/todo-app-backend/src/state/: state.rs
Project/todo-app-backend/src/utils/: password.rs
async_await/: Cargo.toml
attributes/: func_attr.rs  main.rs  struct_field.rs  struct_up.rs
backend_axum/: Cargo.toml  Readme.md
closures/: closure.rs  normfn_clos.rs
collections/: map.rs  string.rs  vector.rs
data-types/: main.rs
errors/: custom_error.rs  use_of_question_mark.rs
generics/: generic-trait.rs  generic-types.rs  main.rs
import-exports/: main.rs  math.rs
iterators/: adv_iter.rs  main.rs
lifetime/: lifetime.rs
modern-import/: main.rs
requests/: Cargo.toml
(+47 files in other folders)
