[package]
name = "todo-app-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

tower-http = { version = "0.6", features = ["cors", "trace"] }

anyhow = "1"

dotenvy = "0.15"